Fix dark mode and light mode issue and make light mode default

--- a/components/layout/layout.css
+++ b/components/layout/layout.css
@@ -1,9 +1,11 @@
 body {
-    background-color: #111;
-    color: rgb(221, 221, 221);
+    background-image: linear-gradient(to right, #e7f6ff, #c3dfff, #b6d8ff, #a1cdff, #a1cdff);
+    color: rgb(49, 49, 49);
     transition-timing-function: ease-in;
-    transition: background-color 0.5s ease, color 0.5s ease;
+    transition: background-color 0.3s ease, color 0.3s ease;
+    transition: background-image 0.3s ease, color 0.3s ease;
 
+    background-color:none;
 }
 
 ::-webkit-scrollbar {
@@ -24,9 +26,10 @@ body {}
     display: none;
 }
 
-body.light-mode {
-    background-image: linear-gradient(to right, #e7f6ff, #c3dfff, #b6d8ff, #a1cdff, #a1cdff);
-    color: rgb(49, 49, 49);
+body.dark-mode {
+    background-color: #111;
+    color: rgb(221, 221, 221);
+    background-image: none;
 }
 
 html {
